@@ -1,10 +1,17 @@
 2013-06-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* eww.el (eww-convert-widgets): Put `help-echo' on input fields so that
+	we can navigate to them.
+
 	* shr.el (shr-colorize-region): Put the colours over the entire region.
 	(shr-inhibit-decoration): New variable.
 	(shr-add-font): Use it to inhibit text property decorations while doing
 	preliminary table renderings.  This speeds up typical Wikipedia page
 	renderings by 15%.
+	(shr-tag-span): Don't respect the <title>, because that overwrites the
+	help-echo from links inside the spans.
+	(shr-next-link): Use `help-echo' for navigation, so that we can
+	navigate to form elements, too.
 
 	* eww.el (eww-button): New face.
 	(eww-convert-widgets): Use it to make submit buttons more button-like.
